--- a/index.css
+++ b/index.css
@@ -3,11 +3,13 @@
 body{
     font-family: "Montserrat", sans-serif;
     height: 100vh;
-    padding: 0;
+    padding: 5px;
     margin: 0;
     user-select: none;
     overflow: hidden;
     text-shadow: 0px 0px ;
+    background-color: black;
+    color: #13A10E;
 }
 
 .container{
@@ -16,6 +18,30 @@ body{
     flex-direction: column;
     align-items: center;
     justify-content: center;
+}
+
+.title{
+    font-size: 45px;
+    display: none;
+}
+
+.container-btns{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.container-question{
+    height: 100%;
+    display: none;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.main{
+    display: flex;
 }
 
 .question{
@@ -31,44 +57,49 @@ body{
     margin: 5px;
     height: 56px;
     width: 56px;
-    border: 1px solid black;
-    border-radius: 5px;
+    border: 2px solid rgb(255, 255, 255);
+    border-radius: 100px;
     display: flex;
     align-items: center;
     justify-content: center;
     cursor: pointer;
 }
 
-.answer:hover{
-    box-shadow: 0px 0px 10px black;
-    background-color: rgba(128, 128, 128, 0.11);
-}
-
-.answer:active{
-    box-shadow: none;
-}
-
-
 .btn-start{
     font-size: 30px;
-    border: 2px black solid;
+    border: 2px rgb(255, 255, 255) solid;
     padding: 5px;
     border-radius: 5px;
-}
-
-.btn-start:hover{
-    box-shadow: 0px 0px 10px black;
-    background-color: rgba(128, 128, 128, 0.11);
 }
 
 .btn-start:active{
     box-shadow: none;
 }
 
-.container-h3{
-    text-align: center;
-    width: 50%;
-    display: flex;
-    justify-content: center;
-    font-size: 30px;
+.consol{
+    font-size: 25px;
+}
+
+.btns{
+    font-size: 25px;
+    padding: 10px;
+
+    border: 2px solid #FFFFFF;
+    border-radius: 50px;
+    margin: 10px;
+
+}
+
+.btn1, .btn2, .btn3{
+    display: none;
+}
+
+.btns:hover{
+    box-shadow: 0px 0px 50px green inset;
+}
+
+.btns:active, .answer:active{
+    transition-property: scale;
+    transition-duration: 0.1s;
+    scale: 0.9;
 }
