--- a/index.css
+++ b/index.css
@@ -1,5 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
 
+:root{
+    --cursor: url(images/green-cursor.png), default;
+    --cursor-pointer: url(images/green-pointer.png), pointer;
+}
+
 body{
     font-family: "Montserrat", sans-serif;
     height: 100vh;
@@ -10,6 +15,7 @@ body{
     text-shadow: 0px 0px ;
     background-color: black;
     color: #13A10E;
+    cursor: var(--cursor);
 }
 
 .container{
@@ -22,8 +28,8 @@ body{
 
 .title{
     font-size: 45px;
+    color: #13A10E;
     display: none;
-    color: transparent;
 }
 
 .container-btns{
@@ -47,6 +53,7 @@ body{
 
 .question{
     font-size: 60px;
+
 }
 .container-answer{
     display: flex;
@@ -63,11 +70,13 @@ body{
     display: flex;
     align-items: center;
     justify-content: center;
-    cursor: pointer;
+    cursor: var(--cursor-pointer);
 }
 
 .answer:hover{
-    border: 2px solid green;
+    transition-property: box-shadow;
+    transition-duration: 0.4s;
+    box-shadow: 0px 0px 50px 10px green;
 }
 
 .btn-start{
@@ -93,19 +102,20 @@ body{
     border-radius: 50px;
     margin: 10px;
 
-    cursor: pointer;
+    cursor: var(--cursor-pointer);
 }
 
 .btn1, .btn2, .btn3{
     display: none;
 
-    border: transparent 2px solid;
-    color: transparent;
-
+    border: white 2px solid;
+    color: #13A10E;
 }
 
 .btns:hover{
-    box-shadow: 0px 0px 50px green inset;
+    transition-property: box-shadow;
+    transition-duration: 0.4s;
+    box-shadow: 0px 0px 50px 10px green;
 }
 
 .btns:active, .answer:active{
@@ -113,4 +123,3 @@ body{
     transition-duration: 0.1s;
     scale: 0.9;
 }
-
